dev/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-argo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-dev-deployment
  labels:
    app: argo-01
    owner: VolodymyrSurnyk
  namespace: dev-argo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argo-01
  template:
    metadata:
      labels:
        app: argo-01 # POD LABEL
    spec:
      containers:
      - name: argo-01-cont
        image: docker.io/vovka7surnyk/task-01
        resources:
          limits:
            memory: "24Mi"
            cpu: "50m"
        ports:
        - containerPort: 8080

# ---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: goapp-autoscale
#   namespace: app
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: vovka01deployment
#   minReplicas: 2
#   maxReplicas: 5
#   metrics:
#   - type: Resource
#     resource:
#       name: cpu
#       target:
#         type: Utilization
#         averageUtilization: 50
#   - type: Resource
#     resource:
#       name: memory
#       target:
#         type: Utilization
#         averageUtilization: 60
